Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -582,7 +582,7 @@
    "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
-    "    return {'xaxis': {range : [x_range[0], x_range[1]]}}"
+    "    return {'xaxis': {'range' : [x_range[0], x_range[1]]}}"
    ]
   },
   {
